Edited Spacing issues again.

--- a/assets/stylesheets/lobby.css
+++ b/assets/stylesheets/lobby.css
@@ -400,8 +400,9 @@ p {
     background-color: #d9544f81;
     border-radius: 5px;
 }
+
 .selected-avatar-3 {
-    background-color: #bebebe;
+    background-color: #b8b8b8;
     border-radius: 5px;
 }
 
